[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 433.852 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 960.0
color = Color( 0.262745, 0.235294, 0.235294, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 960.0
margin_bottom = 960.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 305.0
margin_top = 386.0
margin_right = 655.0
margin_bottom = 574.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 350.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Dungeon Walker"

[node name="Buttons" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 350.0
margin_bottom = 188.0

[node name="ButtonsVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Buttons"]
margin_left = 102.0
margin_right = 248.0
margin_bottom = 124.0

[node name="StartButton" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox"]
margin_right = 146.0
margin_bottom = 60.0

[node name="StartButtonLabels" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/StartButton"]
margin_right = 146.0
margin_bottom = 60.0

[node name="StartButtonMarker" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/StartButton/StartButtonLabels"]
margin_right = 26.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="StartButtonLabel" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/StartButton/StartButtonLabels"]
margin_left = 30.0
margin_right = 146.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="ExitButton" type="CenterContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox"]
margin_top = 64.0
margin_right = 146.0
margin_bottom = 124.0

[node name="ExitButtonLabels" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/ExitButton"]
margin_right = 146.0
margin_bottom = 60.0

[node name="ExitButtonMarker" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/ExitButton/ExitButtonLabels"]
margin_right = 26.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="ExitButtonLabel" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ButtonsVBox/ExitButton/ExitButtonLabels"]
margin_left = 30.0
margin_right = 146.0
margin_bottom = 60.0
rect_min_size = Vector2( 116, 0 )
custom_fonts/font = SubResource( 1 )
text = "Exit"
